--- a/learn_migrations/driver1/Gemfile
+++ b/learn_migrations/driver1/Gemfile
@@ -3,8 +3,9 @@
 source "https://rubygems.org"
 
 # gem "rails"
+gem 'rake'
 gem 'sinatra'
 gem 'sinatra-activerecord'
-gem 'activerecord'
 gem 'sqlite3'
-gem 'rake'
+gem 'yaml'
+gem 'pry'
